5.0.0 -> 5.1a1:
    - jbj: merge "security-sanity-check-rpmpopt-and-rpmmacros" patch from OpenPKG.
    - jbj: merge "no-extra-terminating-newline-on-eval" patch from OpenPKG.
    - jbj: merge "explicit-source-fetch-cli-option" patch from OpenPKG.
    - jbj: merge "download-source-files-from-original-location" patch from OpenPKG.
    - jbj: merge "support-external-download-command" patch from OpenPKG.
    - jbj: merge "support-srcdefattr" patch from OpenPKG.
    - jbj: fix: RPMTAG_NVRA w .src/.pubkey in error msg is bogus.
    - jbj: permit noarch sub-packages. Pattern match guaranteee next ...
    - rpm.org: Enhance error message on failed ts lock acquire (rhbz#427064).
    - jbj: fix the rpm.org memory leak.
    - rpm.org: Don't use static buffers to communicate between funcs, avoid buffer overflows.
    - rpm.org: Use more meaningful variable names than res2 and res3.
    - rpm.org: Make signature verification result not depend on rpm verbosity level, ick.
    - rse: upgraded build environment to use GNU libtool 2.2.2
    - rse: replace %as format specifier with malloc(3) plus %s under non-GLIBC sscanf(3)
    - rse: various code cleanups related to pre-processor macros and C types
    - rse: step back to the LZMA SDK 4.32 (which is identical to LZMA SDK 4.57), but with the rpm5.org cleanups still applied
    - rse: resolve type conflict between Zlib and Lzma after upgrade to latest LZMA SDK 4.40
    - jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
    - jbj: fix: segfault from clobbering RPMMIRE_STRCMP mode w platform string.
    - proyvind: update to latest lzma sdk (4.40)
    - rpm.org: Avoid entirely unnecessary static buffer + string copy.
    - jbj: fix: reverse arrows on erasure dependency graph.
    - rse: provide the necessary pre-processor macros to allow misc/err.h to compile with Sun Studio 12 under Solaris 10
    - jbj: rpmrepo: be kind to the sqlite3 deprived.
    - jbj: rpmrepo: cleanly separate SQL representation from execution.